<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@mipmap/menuskawai">

    <TextView
        android:id="@+id/producto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/et_producto"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/et_descripcion"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/precio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/et_precio"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_salir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_salir" />
</LinearLayout>