<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registrarse">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        android:background="@mipmap/inicio"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/etuser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etemail"
            android:minHeight="48dp"
            android:textColorHint="#706E6E"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etpass1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etpass1"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#706E6E" />

        <EditText
            android:id="@+id/etpass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etpass2"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#706E6E"
            android:autofillHints="" />

        <Button
            android:id="@+id/registrarUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#545454"
            android:hint="@string/btnregistrarBD"
            android:textColorHint="#FFFDFD" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>