<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/inicio"
    android:orientation="vertical"
    tools:context=".IniciarSesion">


    <EditText
        android:id="@+id/etemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etemail"
        android:inputType="text"
        android:textColorHint="#915959" />

    <EditText
        android:id="@+id/etpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etpass"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#915959" />

    <Button
        android:id="@+id/btningresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#908280"
        android:hint="@string/btningresar"
        android:onClick="IniciarSesion"
        android:textColorHighlight="#239ED3"
        android:textColorHint="#F8F1F1"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         />

</LinearLayout>