<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/main"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgcat"
        android:layout_width="match_parent"
        android:layout_height="272dp"
        android:baselineAligned="false"
        app:srcCompat="@mipmap/saludocat"
        tools:layout_editor_absoluteX="262dp"
        tools:layout_editor_absoluteY="20dp"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="404dp"
        android:layout_height="256dp"
        android:layout_marginStart="4dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnknownId">

    </LinearLayout>


    <Button
        android:id="@+id/btnregistrarse"
        android:layout_width="171dp"
        android:layout_height="49dp"
        android:backgroundTint="#988D8D"
        android:hint="@string/btnregistrarse"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.835"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="224dp"
        android:onClick="Registrar"/>

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="171dp"
        android:layout_height="48dp"
        android:layout_marginTop="356dp"
        android:backgroundTint="#988D8D"
        android:hint="@string/btningresar"
        android:textColorHighlight="#10BAD8"
        android:textColorHint="#FDFDFD"
        android:textColorLink="#5925E4"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        android:onClick="Iniciar"/>

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="295dp"
        android:layout_height="39dp"
        android:fontFamily="sans-serif-black"
        android:hint="@string/txtTitle"
        android:textColorHint="#FFFFFF"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="292dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txtSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:hint="@string/txtSubtitle"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="331dp" />


</androidx.constraintlayout.widget.ConstraintLayout>