<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|center_horizontal"
    android:orientation="vertical"
    android:background="@mipmap/menuskawai">


    <LinearLayout
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/producto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/et_producto"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/et_descripcion"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/precio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/et_precio"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <LinearLayout
        android:layout_width="381dp"
        android:layout_height="110dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_editar"
            android:layout_width="wrap_content"
            android:layout_height="89dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            app:icon="@android:drawable/ic_menu_edit"
            app:iconSize="90dp"
            app:iconTint="#000000" />

        <Button
            android:id="@+id/btn_eliminar"
            android:layout_width="wrap_content"
            android:layout_height="89dp"
            android:backgroundTint="#00FFFFFF"
            app:icon="@android:drawable/ic_menu_delete"
            app:iconSize="90dp"
            app:iconTint="#000000" />
    </LinearLayout>

</LinearLayout>